fixed z-index to prevent clashing amongst multiple components

--- a/frontend/outfitcreator/src/Components/Navigation.css
+++ b/frontend/outfitcreator/src/Components/Navigation.css
@@ -4,7 +4,7 @@
   left: 0;
   position: absolute;
   width: 100vw;
-  z-index: 100;
+  z-index: -1;
 }
 
 .BreadCrumbs {
